@@ -1,3 +1,7 @@
+2009-03-20  Sanel <karijes@users.sourceforge.net>
+
+	* src/ThreadableMember.h: removed; not used any more
+
 2009-03-19  Sanel <karijes@users.sourceforge.net>
 
 	* edelib/Window.h:
